--- a/0.10/config.toml
+++ b/0.10/config.toml
@@ -190,9 +190,9 @@ reporting-disabled = false
 ### Controls the listener for OpenTSDB data.
 ###
 [opentsdb]
-  enabled = false
-  # bind-address = ":4242"
-  # database = "opentsdb"
+  enabled = true
+  bind-address = ":4242"
+  database = "db_ndnrtc"
   # retention-policy = ""
   # consistency-level = "one"
 
